<resources>
    <string name="app_name">Devourer of Bricks</string>
    <string name="ad_id">pub-5061023538841530</string>

    <!-- IN GAME STRINGS -->
    <string name="in_game_paused">PAUSED</string>
    <string name="in_game_press_to_start">press to start</string>
    <string name="in_game_hud_time">TIME</string>
    <string name="in_game_hud_points">POINTS</string>
    <string name="in_game_hud_lifes">LIFE</string>
    <string name="in_game_warning">If you leave this game won\'t be saved, are you sure you want to leave?</string>
    <string name="in_game_power_bigger_paddle">Bigger paddle, 20 sec</string>
    <string name="in_game_power_smaller_paddle">Smaller paddle, 20 sec</string>
    <string name="in_game_power_double_points">Double points 20 sec</string>
    <string name="in_game_power_life">&lt;</string>

    <!-- MAIN MENU -->
    <string name="main_menu_app_name_devourer">devourer</string>
    <string name="main_menu_app_name_of">of</string>
    <string name="main_menu_app_name_bricks">bricks</string>
    <string name="main_menu_button_play">play</string>
    <string name="main_menu_button_game_service">game services</string>
    <string name="main_menu_button_about">about</string>
    <string name="main_menu_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <!-- LEVEL SELECTION -->
    <string name="level_selection_title">Select level to play</string>
    <string name="level_selection_total_highscore">total high score:</string>
    <string name="level_item_level">level</string>
    <string name="level_item_high_score">high score: </string>
    <string name="level_item_not_unlocked">Unlocks at: %d</string>
    <string name="level_selection_how_to_button">\?</string>
    <string name="level_selection_how_to_play_title">How to play</string>
    <string name="level_selection_how_to_play_body">Paddle:\nTo steer the paddle you press either the left side of the screen or the right side.
    You just sets the moving direction left or right, the paddle won\'t follow your finger.\n\nPower ups:\nTo get the power up you tap on it,
    but be careful there can also be debuffs.</string>
    <string name="level_selection_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- SCORE SCREEN -->
    <string name="score_screen_game_won">GAME WON</string>
    <string name="score_screen_game_lost">GAME LOST</string>
    <string name="score_screen_points">points</string>
    <string name="score_screen_life">life</string>
    <string name="score_screen_time">time</string>
    <string name="score_screen_final_score">FINAL SCORE</string>
    <string name="score_screen_new_highscore">NEW HIGH SCORE</string>
    <string name="score_screen_button_menu">Main Menu</string>
    <string name="score_screen_button_play">Play Again</string>
    <string name="score_screen_fullscreen_ad">ca-app-pub-3940256099942544/1033173712</string>

    <!-- LOADING SCREEN -->
    <string name="loading_screen_loading">LOADING</string>
    <string name="loading_screen_press_to_play">Press to play</string>
    <string-array name="loading_screen_tips">
        <item>Fetching malware</item>
        <item>Loading the bricks from another dimension</item>
        <item>We are ready when you are, or not...</item>
        <item>You should really not be playing this game</item>
        <item>Don\'t you have anything better to do?</item>
        <item>The game is traveling through time and space just to be with you</item>
        <item>Always remember that everything on the internet is true</item>
        <item>How can "less be more" when more is more?</item>
        <item>Are you ready for this?</item>
        <item>This game is so good I shit bricks</item>
        <item>When life knocks you down, you better buckle up because it ain\'t getting better</item>
        <item>A pun is the lowest form of humor... Unless you thought of it yourself</item>
        <item>No sense in being pessimistic, it wouldn\'t work anyway</item>
        <item>I\'m quitting my job to pursue anxiety full-time</item>
        <item>Keep calm an... Oh shit was that exam tomorrow</item>
        <item>Sunny D and Rum, yum ...yum</item>
        <item>No matter how tempting it might may be, never watch youtube poop!</item>
        <item>&lt;</item>
    </string-array>

    <!-- ABOUT -->
    <string name="about_title">About</string>
    <string name="about_body" formatted="false">Development and design: &lt;a href="https://github.com/DavidMag"&gt;David Magnusson&lt;/a&gt;
    &lt;br/&gt;&lt;br/&gt;
        Music by: &lt;a href="https://www.reverbnation.com/musician/kennethmagnusson"&gt;Kenneth Magnusson&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;
    Button sound/&lt;a href="https://www.freesound.org/people/Cabeeno%20Rossley/sounds/126418/"&gt;button select&lt;/a&gt;*:
        &lt;a href="https://www.freesound.org/people/Cabeeno%20Rossley/"&gt;Cabeeno Rossley&lt;/a&gt;
    &lt;br/&gt;
    Counting points/&lt;a href="https://www.freesound.org/people/ProjectsU012/sounds/341695/"&gt;Coins 1&lt;/a&gt;*:
        &lt;a href="https://www.freesound.org/people/ProjectsU012/"&gt;ProjectsU012&lt;/a&gt;
    &lt;br/&gt;
    New highscore/&lt;a href="https://www.freesound.org/people/LittleRobotSoundFactory/sounds/270330/"&gt;Jingle_Achievement_01&lt;/a&gt;*:
        &lt;a href="https://www.freesound.org/people/LittleRobotSoundFactory/"&gt;LittleRobotSoundFactory&lt;/a&gt;
    &lt;br/&gt;
    Ball crash/&lt;a href="https://www.freesound.org/people/LittleRobotSoundFactory/sounds/270306/"&gt;Explosion_02&lt;/a&gt;*:
        &lt;a href="https://www.freesound.org/people/LittleRobotSoundFactory/"&gt;LittleRobotSoundFactory&lt;/a&gt;
    &lt;br/&gt;&lt;br/&gt;
    * Under the &lt;a href="https://creativecommons.org/licenses/by/3.0/"&gt;CC BY&lt;/a&gt; license and may have been slightly edited such as shortened or adjusted the volume.</string>
    <string name="about_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
