<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:text="@string/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:textColor="@color/devourer_green" />

    <TextView
        android:text="@string/about_body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/about_body"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/about_title"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/devourer_green"
        android:textAlignment="textStart"
        android:linksClickable="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/about_ad"
        android:layout_marginBottom="8dp" />

    <com.google.android.gms.ads.AdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_ad"
        ads:adSize="BANNER"
        ads:adUnitId="@string/about_banner_ad_unit_id"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>