<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="se.davidmagnusson.devourerofbricks.viewmodels.ScoreScreenViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:clickable="true"
        android:onClick="@{viewmodel::onLayoutClick}">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_game_status"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="GAME WON"
            android:text="@{viewmodel.header}"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="24sp"
            android:textColor="@color/devourer_green" />

        <TextView
            android:text="@string/score_screen_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_points"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_game_status"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/devourer_green" />

        <TextView
            android:text="@string/score_screen_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_life"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_points"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/devourer_green" />

        <TextView
            android:text="@string/score_screen_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_time"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_life"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/devourer_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num_points"
            tools:text="230"
            android:text="@{viewmodel.gamePoints}"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_points"
            android:textColor="@color/devourer_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num_life"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_life"
            tools:text="3"
            android:text="@{viewmodel.gameLife}"
            android:textColor="@color/devourer_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num_time"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_time"
            tools:text="108"
            android:text="@{viewmodel.gameTime}"
            android:textColor="@color/devourer_green" />

        <Button
            android:text="@string/score_screen_button_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_play"
            app:layout_constraintRight_toLeftOf="@+id/guideline_50"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.66"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            android:textColor="@color/devourer_green"
            android:onClick="@{viewmodel::onPlayAgainButtonClicked}"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="592dp"
            android:id="@+id/guideline_50"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="192dp" />

        <Button
            android:text="@string/score_screen_button_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_menu"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_50"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            android:textColor="@color/devourer_green"
            android:onClick="@{viewmodel::onMainMenuButtonClick}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_new_highscore"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_menu"
            android:layout_marginBottom="16dp"
            tools:text="new highscore"
            android:text="@{viewmodel.newHighscoreString}"
            android:textColor="@color/devourer_green" />

        <TextView
            android:text="@string/score_screen_final_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_final_score"
            app:layout_constraintBottom_toTopOf="@+id/text_new_highscore"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/devourer_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num_final_score"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/text_new_highscore"
            android:layout_marginBottom="16dp"
            tools:text="1337"
            android:text="@{viewmodel.gameFinalScore}"
            android:textColor="@color/devourer_green" />
    </android.support.constraint.ConstraintLayout>
</layout>